--- a/lahaus_api/test/fixtures/users.yml
+++ b/lahaus_api/test/fixtures/users.yml
@@ -1,8 +1,9 @@
 # Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  email: MyString
-  password_digest: MyString
+  id: 99
+  email: email@email.com
+  password_digest: 1234
 
 two:
   email: MyString
