tests for index and signup erase from login page

--- a/lahaus_api/test/fixtures/users.yml
+++ b/lahaus_api/test/fixtures/users.yml
@@ -1,4 +1,5 @@
 # Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
+<% require 'bcrypt' %>
 
 one:
   id: 99
@@ -7,4 +8,16 @@ one:
 
 two:
   email: MyString
-  password_digest: MyString
+  password_digest: :MyString
+
+three:
+  id: 100
+  email: "email1@email.com"
+  password_digest: <%= BCrypt::Password.create('1234') %>
+  isadmin: false
+
+four:
+  id: 101
+  email: "admin@admin.com"
+  password_digest: <%= BCrypt::Password.create('admin1234') %>
+  isadmin: true
