--- a/lahaus_api/test/fixtures/users.yml
+++ b/lahaus_api/test/fixtures/users.yml
@@ -12,12 +12,13 @@ two:
 
 three:
   id: 100
-  email: "email1@email.com"
+  email: "ejemplo1@mail.com"
+  full_name: "ejemplo1"
   password_digest: <%= BCrypt::Password.create('1234') %>
   isadmin: false
 
 four:
   id: 101
-  email: "admin@admin.com"
+  email: "admin@mail.com"
   password_digest: <%= BCrypt::Password.create('admin1234') %>
   isadmin: true
