--- a/lahaus_api/Gemfile
+++ b/lahaus_api/Gemfile
@@ -7,6 +7,8 @@ ruby '2.5.1'
 gem 'rails', '~> 6.0.3', '>= 6.0.3.3'
 # Use sqlite3 as the database for Active Record
 gem 'sqlite3', '~> 1.4'
+# postgresql gem
+gem 'pg', '>= 0.18', '< 2.0'
 # Use Puma as the app server
 gem 'puma', '~> 4.1'
 # Build JSON APIs with ease. Read more: https://github.com/rails/jbuilder
